# fastapi

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
app/: Dockerfile  main.py  settings.py
app/engines/: postgres_storage.py
app/helpers/checks/: user.py
app/models/: base.py  users.py
app/repositories/: user.py
app/routers/: __init__.py  auth.py  example_route.py  user.py
app/schemes/: auth.py  users.py
app/schemаs/: users.py
app/services/: auth.py  users.py
